--- a/ClientSettings/ClientAppSettings.json
+++ b/ClientSettings/ClientAppSettings.json
@@ -1,5 +1,4 @@
-  For Error Copy "DFIntTaskSchedulerTargetFps": "99999",
---
+# For Error Copy "DFIntTaskSchedulerTargetFps": "99999",
 {
   "DFIntTaskSchedulerTargetFps": "99999",
   "FLogNetwork": "7",
