--- a/ClientSettings/ClientAppSettings.json
+++ b/ClientSettings/ClientAppSettings.json
@@ -1,4 +1,4 @@
-# For Error Copy "DFIntTaskSchedulerTargetFps": "99999", Is Copy | "DFIntTaskSchedulerTargetFps": 99999
+For Error Copy "DFIntTaskSchedulerTargetFps": "99999", Is Copy | "DFIntTaskSchedulerTargetFps": 99999
 
 {
   "DFIntTaskSchedulerTargetFps": "99999",
