--- a/ClientSettings/ClientAppSettings.json
+++ b/ClientSettings/ClientAppSettings.json
@@ -1,3 +1,4 @@
+Error Find Settings Roblox Vision Get Remove For "DFIntTaskSchedulerTargetFps": "99999",
 {
   "DFIntTaskSchedulerTargetFps": "99999",
   "FLogNetwork": "7",
